[package]
name = "dropspace_sale"
version = "0.1.0"
edition = "2021"
authors = ["Mihir Wadekar"]

[dependencies]

ink = { version = "4.2.1", default-features = false }
ink_prelude = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }

sp-core = "26.0.0"

[lib]
name = "dropspace_sale"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = [] 